--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
                 <version>3.3.2</version> <!-- O la versión más reciente -->
             </plugin>
             <plugin>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>11.0.15</version> <!-- Usa una versión compatible con JDK 17 -->
+            </plugin>
+            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
