--- a/gameoflife-web/pom.xml
+++ b/gameoflife-web/pom.xml
@@ -58,7 +58,7 @@
             <plugin>
                 <groupId>net.serenity-bdd.maven.plugins</groupId>
                 <artifactId>serenity-maven-plugin</artifactId>
-                <version>${thucydides.version}</version>
+                <version>3.9.0</version>
                 <executions>
                     <execution>
                         <id>serenity-reports</id>
